<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$CommentaryDetailFragment">

    <!-- Event Line -->
    <TextView android:id="@+id/labelCompetition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/matchCompetition"
        android:textStyle="bold" />

    <TextView android:id="@+id/cCompetition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/competitionName"
        android:layout_marginLeft="15dp"
        android:layout_alignBaseline="@+id/labelCompetition"
        android:layout_toRightOf="@+id/labelReferee" />

    <!-- Event Time -->

    <TextView
        android:id="@+id/labelVenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/matchVenue"
        android:textStyle="bold"
        android:layout_below="@+id/labelCompetition"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/cVenueName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/venue"
        android:layout_alignBaseline="@+id/labelVenue"
        android:layout_toRightOf="@+id/labelVenue" />

    <TextView android:id="@+id/labelKickOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelVenue"
        android:layout_marginTop="20dp"
        android:text="@string/matchKickOff"
        android:textStyle="bold" />

    <TextView android:id="@+id/cKickOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/labelKickOff"
        android:layout_alignBaseline="@+id/labelKickOff"
        android:layout_marginLeft="15dp"
        android:text="heading text" />

    <TextView
        android:id="@+id/labelDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/matchDuration"
        android:textStyle="bold"
        android:layout_below="@+id/labelKickOff"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/cDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/duration"
        android:layout_alignBaseline="@+id/labelDuration"
        android:layout_toRightOf="@+id/labelDuration" />

    <TextView android:id="@+id/labelAttendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelDuration"
        android:layout_marginTop="20dp"
        android:text="@string/matchAttendance"
        android:textStyle="bold" />

    <TextView android:id="@+id/cAttendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/labelAttendance"
        android:layout_alignBaseline="@+id/labelAttendance"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:text="@string/attendanceText" />

    <TextView android:id="@+id/labelReferee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelAttendance"
        android:layout_marginTop="20dp"
        android:text="@string/matchReferee"
        android:textStyle="bold" />

    <TextView android:id="@+id/cReferee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/labelReferee"
        android:layout_alignBaseline="@+id/labelReferee"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:text="@string/squadValue" />

    <ListView
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:overScrollMode="ifContentScrolls"
        android:paddingTop="20dp"
        android:layout_below="@+id/labelReferee"
        android:layout_centerHorizontal="true"
        android:paddingBottom="?attr/actionBarSize" />

</RelativeLayout>
